--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
         <ul>
           <li>
             <img
-              src="./images/box_1.jpg"
+              src="./images/box-1.jpg"
               alt="Человек работает за компьютером и планшетом"
               width="370"
             />
           </li>
           <li>
             <img
-              src="./images/box_2.jpg"
+              src="./images/box-2.jpg"
               alt="Человек работает за ноутбуком со сматрфоном"
               width="370"
             />
           </li>
           <li>
             <img
-              src="./images/box_3.jpg"
+              src="./images/box-3.jpg"
               alt="Человек держит в руках планшет и стилус"
               width="370"
             />
