--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>Студия</li>
           <li>Портфолио</li>
@@ -133,7 +133,7 @@
     </main>
 
     <footer>
-      <a href="./">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         г. Киев, пр-т Леси Украинки, 26 <br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
