--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Студия</li>
-          <li>Портфолио</li>
-          <li>Контакты</li>
+          <li>
+            <a href="">Студия</a>
+          </li>
+          <li>
+            <a href="">Портфолио</a>
+          </li>
+          <li>
+            <a href="">Контакты</a>
+          </li>
         </ul>
       </nav>
       <ul>
@@ -93,40 +99,40 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
             <img
               src="./images/IhorDemyanenko.jpg"
               alt="Фото Игоря Демьяненко"
               width="270"
             />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
             <img
               src="./images/OlhaRepina.jpg"
               alt="Фото Ольги Репиной"
               width="270"
             />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
             <img
               src="./images/NikolayTarasov.jpg"
               alt="Фото Николая Тарасова"
               width="270"
             />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
             <img
               src="./images/MikhailErmakov.jpg"
               alt="Фото Михаила Ермакова"
               width="270"
             />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -135,7 +141,7 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
+        <p>г. Киев, пр-т Леси Украинки, 26 <br /></p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
