--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p> <br />
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
